--- a/WebService/package.json
+++ b/WebService/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "wasm-easypass": "file: ../src/main/rust/pkg"
   },
   "scripts": {
     "start": "react-scripts start",
