--- a/WebService/src/main/app/package.json
+++ b/WebService/src/main/app/package.json
@@ -20,9 +20,9 @@
     "wasm-easypass": "../rust/pkg"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.1.3",
+    "wasm-loader": "^1.3.0"
   }
 }
