--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 - task: Gradle@2
   inputs:
     gradleWrapperFile: 'gradlew'
-    workingDirectory: 'WebSerivce'
+    workingDirectory: 'WebService'
     tasks: 'build'
     publishJUnitResults: false
     javaHomeOption: 'JDKVersion'
