--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,12 @@ steps:
   displayName: 'Run a multi-line script'
 
 - script: |
-    ls
-  displayName: 'ls'
+    cd WebService
+  displayName: 'Testing WebService'
 
 - task: Gradle@2
   inputs:
     gradleWrapperFile: 'gradlew'
-    workingDirectory: ''
     tasks: 'build'
     publishJUnitResults: false
     javaHomeOption: 'JDKVersion'
