Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,10 @@ steps:
 
 - script: |
     cd ./WebService
-    gradlew build
+    echo "ls"
+    ls 
+    echo "ls ende"
+    ./gradlew build
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
