Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ steps:
 - task: Gradle@2
   inputs:
     gradleWrapperFile: '$(Build.SourcesDirectory)/WebService/gradlew'
+    workingDirectory: '$(Build.SourcesDirectory)/WebService'
     tasks: 'build'
     publishJUnitResults: false
     javaHomeOption: 'JDKVersion'
