--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,11 +8,10 @@ pool:
 jobs:
  - job: Test_WebService
    steps:
-    - template: ci/azure-install-rust.yml
+    - template: _azure-pipelines/rust.yml
       parameters:
         toolchain: nightly
-    - template: ci/azure-install-node.yml
-    - template: ci/azure-install-geckodriver.yml
+    - template: _azure-pipelines/geckodriver.yml
 
     - script: |
         cd $(Build.SourcesDirectory)/WebService/src/main/rust
