--- a/WebService/src/main/app/package.json
+++ b/WebService/src/main/app/package.json
@@ -13,17 +13,20 @@
     "Martin Wustinger <mwustinger@student.tgm.ac.at>"
   ],
   "dependencies": {
+    "@wasm-tool/wasm-pack-plugin": "0.1.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
-    "@wasm-tool/wasm-pack-plugin": "0.1.6",
-    "wasm-easypass": "../rust/pkg"
+    "wasm-easypass": "../rust/pkg",
+    "worker-loader": "^2.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "workerBuild": "cd ./node_modules/worker-loader && yarn install && yarn run build",
+    "defaults": "webpack-defaults"
   },
   "eslintConfig": {
     "extends": "react-app"
