--- a/WebService/src/main/app/package.json
+++ b/WebService/src/main/app/package.json
@@ -1,32 +1,17 @@
 {
-  "name": "easypass",
+  "name": "my-app",
   "version": "0.1.0",
-  "bin": {
-    "create-wasm-app": ".bin/create-wasm-app.js"
-  },
-  "private": false,
-  "license": "(MIT OR Apache-2.0)",
-  "contributors": [
-    "Kacper Urbaniec <at.kacper.urbaniec@gmail.com>",
-    "Sebastian Wahl <swahl@student.tgm.ac.at>",
-    "Moritz Welsch <mwelsch@student.tgm.ac.at>",
-    "Martin Wustinger <mwustinger@student.tgm.ac.at>"
-  ],
+  "private": true,
   "dependencies": {
-    "@wasm-tool/wasm-pack-plugin": "0.1.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "wasm-easypass": "../rust/pkg",
-    "worker-loader": "^2.0.0"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "workerBuild": "cd ./node_modules/worker-loader && yarn install && yarn run build",
-    "defaults": "webpack-defaults"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,9 +27,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-app-rewired": "^2.1.3",
-    "wasm-loader": "^1.3.0"
   }
 }
