--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
 
     - script: |
         cd $(Build.SourcesDirectory)/WebService/src/main/rust
-        wasm-pack build
+        wasm-pack build --out-dir ../app/pkg
       displayName: 'Building WebAssembly'
 
     - script: |
