--- a/WebService/src/main/app/package.json
+++ b/WebService/src/main/app/package.json
@@ -1,48 +1,29 @@
 {
   "name": "easypass",
-  "version": "0.1.0",
-  "bin": {
-    "create-wasm-app": ".bin/create-wasm-app.js"
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server --open --hot --mode development",
+    "build": "webpack --mode production"
   },
-  "private": false,
-  "license": "(MIT OR Apache-2.0)",
-  "contributors": [
-    "Kacper Urbaniec <at.kacper.urbaniec@gmail.com>",
-    "Sebastian Wahl <swahl@student.tgm.ac.at>",
-    "Moritz Welsch <mwelsch@student.tgm.ac.at>",
-    "Martin Wustinger <mwustinger@student.tgm.ac.at>"
-  ],
-  "dependencies": {
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "@wasm-tool/wasm-pack-plugin": "0.1.6",
-    "wasm-easypass": "../rust/pkg",
-    "worker-loader": "2.0.0"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-app-rewired": "^2.1.3",
-    "wasm-loader": "^1.3.0"
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
+    "@wasm-tool/wasm-pack-plugin": "^1.0.1"
   }
 }
