--- a/WebService/src/main/app/package.json
+++ b/WebService/src/main/app/package.json
@@ -1,29 +1,52 @@
 {
   "name": "easypass",
   "version": "0.0.1",
-  "description": "",
+  "description": "Template project for Spring/React/WebAssembly.",
+  "repository": {
+    "url": "https://github.com/U3W/Template"
+  },
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --hot --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "React",
+    "WebAssembly",
+    "WebWorker",
+    "React WebWorker"
+  ],
+  "license": "(MIT OR Apache-2.0)",
+  "contributors": [
+    "Kacper Urbaniec <at.kacper.urbaniec@gmail.com>",
+    "Sebastian Wahl <swahl@student.tgm.ac.at>",
+    "Moritz Welsch <mwelsch@student.tgm.ac.at>",
+    "Martin Wustinger <mwustinger@student.tgm.ac.at>"
+  ],
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "@wasm-tool/wasm-pack-plugin": "^1.0.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "@wasm-tool/wasm-pack-plugin": "^1.0.1"
+    "copy-webpack-plugin": "^5.0.4"
+  },
+  "jest": {
+    "globals": {
+      "__DEV__": true
+    },
+    "testRegex": "./test/.*.js$",
+    "rootDir": "."
   }
 }
